--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "mongoose": "^5.8.9",
     "node": "^12.14.1"
   }
 }
